test/2/type/struct-positional-follows-label-expr.ploy
main = {
  _ = (a=0 0)
}
